deploying it with addition group  feature

--- a/package.json
+++ b/package.json
@@ -2,21 +2,21 @@
   "name": "real_time_web_chat_app",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
-  "scripts": {
-    "build":"npm install --prefix backend && npm install --prefix frontend && npm run build --prefix frontend",
-    "start":"npm run start --prefix backend"
+  "keywords": [],
+  "homepage": "https://github.com/Real-Time-Web-Chat-App-3109/Real_Time_Web_Chat_App#readme",
+  "bugs": {
+    "url": "https://github.com/Real-Time-Web-Chat-App-3109/Real_Time_Web_Chat_App/issues"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Real-Time-Web-Chat-App-3109/Real_Time_Web_Chat_App.git"
   },
-  "keywords": [],
-  "author": "",
   "license": "ISC",
+  "author": "",
   "type": "commonjs",
-  "bugs": {
-    "url": "https://github.com/Real-Time-Web-Chat-App-3109/Real_Time_Web_Chat_App/issues"
-  },
-  "homepage": "https://github.com/Real-Time-Web-Chat-App-3109/Real_Time_Web_Chat_App#readme"
+  "main": "index.js",
+  "scripts": {
+    "build": "npm install --prefix backend && npm install --prefix frontend && npm run build --prefix frontend",
+    "start": "npm run start --prefix backend"
+  }
 }
